gccida/c0/reload
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1238:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1247:13: error: expected identifier or '('
 struct set = v11; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1262:7: error: expected expression
if (  struct set && ( unsigned __int16)*( _DWORD *)set->fld[0].rtwint == 61 ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1313:12: error: expected expression
else if (  struct set 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1380:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[i]), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1380:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[i]), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1481:52: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( list = reg_equiv_init[i]; list; list = ( rtx)list[1] ) 
                                                   ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1505:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 1113, "reload"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1558:21: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)&reg[1] = reg_equiv_memory_loc[i][1]; 
                    ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1596:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
*pnote = ( rtx)( *pnote)[1]; 
               ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1630:7: error: use of undeclared identifier 'reload_verbose_warned'
if ( !reload_verbose_warned ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/reload1.c:1633:1: error: use of undeclared identifier 'reload_verbose_warned'
reload_verbose_warned = 1; 
^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload/src/obj/reload1.o] Error 1
